# aoc2021

./: .gitignore  Makefile  README.md  cheat.py  setup.cfg  test.py
aoc/: __init__.py
aoc/2021/: __init__.py  __version__.py  day1.py
aoc/y2021/: __version__.py  day0.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  get_test.py  score.py  utils.py
inputs/: day0.txt
