# based on https://packaging.python.org/tutorials/packaging-projects/ as of March 2021

[metadata]
name = aoc2021
version = attr: aoc.y2021.__version__
author = Ryan Crawford
author_email = rcrawford@exptechinc.com
description = Solutions to the 2021 Advent of Code competition.
long_description = file: README.md
long_description_content_type = text/markdown
url = NA
project_urls =
    Bug Tracker = NA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# TODO: edit this list based on your package needs!
install_requires =
    numpy
    black
    pylint
    isort

package_dir =
    = .
packages = find_namespace:
python_requires = >=3.8


[options.extras_require]
test =
    pylint
    pytest
    pytest-cov

[options.packages.find]
include =
    aoc.y2021
    aoc.y2021.*

[options.entry_points]
console_scripts =
  run_day1 = aoc.y2021.day1:main
  run_day7 = aoc.y2021.day7:main
  run_day8 = aoc.y2021.day8:main
